refactor: modernize Java API usage to Java 17 idioms
- Replace Collectors.toList() with .toList() (5 occurrences, 3 files)
- Replace Collections.singletonList() with List.of() in UserDetailsServiceImpl
- Replace Arrays.asList() with List.of() in SecurityConfig
- Remove unused Collectors/Collections/Arrays imports
- Remove stale comment in RateLimitProperties

All 459 tests pass, zero compile warnings.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>